--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 <body>
 <div class="reveal">
   <div class="slides">
-    <section>TODO: Add Title Slide</section>
+    <section>Selectors in Redux</section>
     <section>TODO: Add Content Slides</section>
   </div>
 </div>
